src/tests/testfiles/variable-declarations/6.txt
testfiles/variable-declarations/6.c:2:7: error: incompatible types when initializing type 'int' using type 'float'
int arr[3] = {1, 2.0, 4};
    ^
